Fix a rendering issue on Safari when resizing panels

--- a/templates/html/doxygen.css
+++ b/templates/html/doxygen.css
@@ -10,6 +10,11 @@ body, table, div, p, dl {
 	line-height: 22px;
 }
 
+body.resizing {
+	user-select: none;
+	-webkit-user-select: none;
+}
+
 #doc-content {
 	scrollbar-width: thin;
 }
